# minty

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  scraps.rs
src/app/: controller.rs  left_menu.rs  mod.rs  pager.rs  table_view.rs  top_panel.rs  top_panel_checkbox.rs
src/enums/: mod.rs
src/file/: mod.rs
src/finder/: mod.rs
src/gui/: controller.rs  mod.rs  view.rs
src/newui/: mod.rs
src/resources/: Info.plist  resources.rc
