[package]
name = "minty"
version = "0.1.0"
edition = "2021"
 
[dependencies]
#error-chain = "0.12.4"
#reqwest = { version = "0.11", features = ["json"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1.16.0", features = ["full"] } 
rayon = "1.4.1"
walkdir = "2"
regex = "1"
chrono = "0.4"
md5 = "0.7.0"
jwalk = "0.5"
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
egui = { git = "https://github.com/emilk/egui", branch = "master" }
rfd = "0.7.0"
byte-unit = "4.0.3"
fuzzy-matcher = "0.3.7"
image = "0.24.1"

[profile.dev]
opt-level = 3
panic = 'unwind'