[package]
name = "minty"
version = "0.1.0"
edition = "2021"
authors = ["mjehrhart <https://github.com/mjehrhart>"]

build="build.rs"

[dependencies]
futures = "0.3" # for our async / await blocks
tokio = { version = "1.16.0", features = ["full"] } 
rayon = "1.4.1"
walkdir = "2"
regex = "1"
chrono = "0.4"
md5 = "0.7.0"
jwalk = "0.5"
#eframe = { git = "https://github.com/emilk/egui", branch = "master" }
#egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = "0.17.0"
egui = "0.17.0"
rfd = "0.7.0"
byte-unit = "4.0.3"
fuzzy-matcher = "0.3.7"
image = "0.24.1"
home = "0.5.3"

[build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 3
panic = 'unwind'