[package]
name = "minty"
version = "0.1.1"
edition = "2021"
authors = ["mjehrhart <https://github.com/mjehrhart>"] 
license = "MIT"
repository = "https://github.com/mjehrhart/minty"
description = "Extremely fast file deduplication app written in rust using parrellism with a rust gui."
keywords = ["search", "file", "filesystem", "deduplication", "find"]


#build="build.rs"

[dependencies]
eframe = "0.17.0"
egui = "0.17.0"
egui_extras = { version = "0.17.0", features = ["image", "svg"] }  
image = { version = "0.24.1", default-features = false, features = ["png"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1.16.0", features = ["full"] } 
rayon = "1.4.1"
walkdir = "2"
regex = "1"
chrono = "0.4"
md5 = "0.7.0"
blake3 = "1.3.1"
jwalk = "0.5"
rfd = "0.7.0"
byte-unit = "4.0.3"
fuzzy-matcher = "0.3.7" 
home = "0.5.3"